--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/MatriculasNuevoMilenio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\CLAUDIO CRUZADO\\Downloads\\jcalendar-1.4.jar
+file.reference.mssql-jdbc-9.4.1.jre8.jar=sqljdbc_9.4\\enu\\mssql-jdbc-9.4.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mssql-jdbc-9.4.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
