--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/MatriculasNuevoMilenio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jasperreports-5.6.0.jar=JasperReportLibraries\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\CLAUDIO CRUZADO\\Downloads\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-9.4.1.jre8.jar=sqljdbc_9.4\\enu\\mssql-jdbc-9.4.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mssql-jdbc-9.4.1.jre8.jar}
+    ${file.reference.mssql-jdbc-9.4.1.jre8.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
