--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,8 +18,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -27,6 +31,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/MatriculasNuevoMilenio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=JasperReportLibraries\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=JasperReportLibraries\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=JasperReportLibraries\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=JasperReportLibraries\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=JasperReportLibraries\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=JasperReportLibraries\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=JasperReportLibraries\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=JasperReportLibraries\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\CLAUDIO CRUZADO\\Downloads\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-9.4.1.jre8.jar=sqljdbc_9.4\\enu\\mssql-jdbc-9.4.1.jre8.jar
@@ -35,11 +46,20 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-9.4.1.jre8.jar}:\
-    ${file.reference.jasperreports-5.6.0.jar}
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -47,6 +67,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -72,9 +94,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
